--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -103,6 +103,7 @@ set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:8003:3c15:1500:ab25:c6e8:f4f4:2a47;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b0:25b:f700:7fb0:98ab:2ba2:2ae5;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:3514::b;
 set_real_ip_from 2001:b030:2422::7234;
@@ -127,6 +128,7 @@ set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c03::f03c:95ff:fef5:a5a5;
+set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c09::f03c:95ff:fe2d:cc40;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
@@ -144,7 +146,6 @@ set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:a378::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:18:f84a::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fef9:100:1100::199;
@@ -156,6 +157,7 @@ set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -210,7 +212,9 @@ set_real_ip_from 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:210b;
 set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
+set_real_ip_from 2605:6400:30:f78b::2;
 set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
+set_real_ip_from 2605:6400:30:f7ca::2;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
