--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -31,7 +31,6 @@ allow 104.244.74.97;
 allow 104.244.75.140;
 allow 104.244.75.74;
 allow 104.244.76.237;
-allow 104.244.77.208;
 allow 104.244.78.162;
 allow 104.244.78.232;
 allow 104.244.78.233;
@@ -178,7 +177,6 @@ allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -706,6 +704,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.54.49;
 allow 198.98.57.151;
 allow 198.98.57.74;
@@ -978,6 +977,7 @@ allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
@@ -1063,9 +1063,9 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
-allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1074,6 +1074,7 @@ allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1117,7 +1118,6 @@ allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
-allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
@@ -1341,6 +1341,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1586,7 +1587,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1659,6 +1659,7 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
 allow 2a10:1fc0:10::a63c:724c;
+allow 2a10:1fc0:10::ce18:9bf9;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1737,7 +1738,6 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
-allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
@@ -1850,6 +1850,7 @@ allow 51.89.136.168;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1915,6 +1916,7 @@ allow 81.17.28.95;
 allow 81.181.104.22;
 allow 8.208.26.177;
 allow 8.209.106.19;
+allow 82.118.248.205;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1928,6 +1930,7 @@ allow 84.239.46.144;
 allow 84.247.183.128;
 allow 84.252.120.131;
 allow 85.239.41.130;
+allow 85.239.55.172;
 allow 85.93.218.204;
 allow 86.107.101.115;
 allow 86.107.101.122;
