--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -31,6 +31,7 @@ allow 104.244.74.97;
 allow 104.244.75.140;
 allow 104.244.75.74;
 allow 104.244.76.237;
+allow 104.244.77.208;
 allow 104.244.78.162;
 allow 104.244.78.232;
 allow 104.244.78.233;
@@ -222,6 +223,7 @@ allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.143.138;
@@ -1120,6 +1122,7 @@ allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
+allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
@@ -1589,6 +1592,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1739,6 +1743,7 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
